--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <td style="vertical-align: middle;">
                     <a href="index.html">
                         <img src="images\cartoon_network_logo.gif" alt="Cartoon Network Logo" width="150px" height="150px" style="border-radius:10px; margin:10px; transition: transform 0.5s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"> 
-                <th colspan="2" align="center" bgcolor="black" style="color:white; font-size:30px; font-family:Arial; padding:40px;">
-                <b>Cartoon Network Shows</b>
+                <th colspan="2" align="center" bgcolor="black" style="color:white; font-size:30px; font-family:Arial; padding:40px; text-align: center; position: relative; padding-left: 60px; padding-right: 110px;">
+                    <b>Cartoon Network Shows</b>
                 </th>
                 </td>
                 <td style="vertical-align: right;">
@@ -31,21 +31,21 @@
             <tr align="center">
                 <td> 
                     <a href="https://regularshow.fandom.com/wiki/Regular_Show_Wiki" target="_blank" rel="noopener noreferrer"> 
-                        <img src="images\regular_show.png" alt="Regular Show" width="200px" style="border-radius:10px; margin:10px; transition: transform 0.5s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
+                        <img src="images\regular_show.png" alt="Regular Show" width="200px" style="border-radius:10px; margin:10px; transition: transform 0.3s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
                     </a> 
                 </td>
                 <td> 
                     <a href="https://theamazingworldofgumball.fandom.com/wiki/The_Amazing_World_of_Gumball_Wiki" target="_blank" rel="noopener noreferrer">
-                        <img src="images\the_amazing_world_of_gumball.png" alt="The Amazing World of Gumball" width="200" style="border-radius:10px; margin:10px; transition: transform 0.5s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
+                        <img src="images\the_amazing_world_of_gumball.png" alt="The Amazing World of Gumball" width="200" style="border-radius:10px; margin:10px; transition: transform 0.3s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
                 </td>
                 <td> 
                     <a href="https://courage.fandom.com/wiki/Courage_the_Cowardly_Dog_Wiki" target="_blank" rel="noopener noreferrer">
-                        <img src="images\courage_the_cowardly_dog.png" alt="Courage the Cowardly Dog" width="200" style="border-radius:10px; margin:10px; transition: transform 0.5s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
+                        <img src="images\courage_the_cowardly_dog.png" alt="Courage the Cowardly Dog" width="200" style="border-radius:10px; margin:10px; transition: transform 0.3s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
                     </a>
                 </td>
                 <td> 
                     <a href="https://ben10.fandom.com/wiki/Ben_10_Planet" target="_blank" rel="noopener noreferrer">
-                        <img src="images\ben_10.png" alt="Ben 10" width="200" style="border-radius:10px; margin:10px; transition: transform 0.5s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
+                        <img src="images\ben_10.png" alt="Ben 10" width="200" style="border-radius:10px; margin:10px; transition: transform 0.3s ease-in-out; cursor: pointer;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'"
                     </a> 
                 </td>
             </tr>
